fix gap in distributors list

--- a/src/components/ServiceStationDetailsBottom/DistributorsPart/DistributorsLit/DistributorsList.module.css
+++ b/src/components/ServiceStationDetailsBottom/DistributorsPart/DistributorsLit/DistributorsList.module.css
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 14px; /* змінила геп, щоб дві картки помістились в один рядок*/
 }
